unpackaged/main/default/objects/Library_General_Settings__c/Library_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This would be used to store the general settings of Library as per Profiles/user</description>
    <label>Library General Settings</label>
</CustomObject>