unpackaged/main/default/objects/Library_General_Settings__c/fields/Daily_Fine_Magazines__c.field-meta.xml
<CustomField>
    <fullName>Daily_Fine_Magazines__c</fullName>
    <label>Daily Fine Magazines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>