unpackaged/main/default/objects/Library_General_Settings__c/fields/Item_Issue_Limit__c.field-meta.xml
<CustomField>
    <fullName>Item_Issue_Limit__c</fullName>
    <label>Item Issue Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>