unpackaged/main/default/objects/Library_General_Settings__c/fields/Lost_Charge__c.field-meta.xml
<CustomField>
    <fullName>Lost_Charge__c</fullName>
    <label>Lost Charge %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>